--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,7 @@ project(":core") {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
-        
+        testImplementation('org.junit.jupiter:junit-jupiter-api:5.4.2')
+        testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
     }
 }
