--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,8 @@ project(":core") {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
-        testImplementation('org.junit.jupiter:junit-jupiter-api:5.4.2')
-        testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
+        testImplementation('org.junit.jupiter:junit-jupiter-api:5.+')
+        testRuntime('org.junit.jupiter:junit-jupiter-engine:5.+')
+        testImplementation('org.mockito:mockito-core:3.+')
     }
 }
