--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,6 +5,7 @@ sourceCompatibility = 1.8
 
 sourceSets.main.java.srcDirs = [ "src/" ]
 sourceSets.test.java.srcDirs = ["test/"]
+sourceSets.test.resources.srcDirs = ["testAssets/"]
 
 test {
     useJUnitPlatform()
