--- a/build.gradle
+++ b/build.gradle
@@ -63,4 +63,9 @@ project(":core") {
         testRuntime('org.junit.jupiter:junit-jupiter-engine:5.+')
         testImplementation('org.mockito:mockito-core:3.+')
     }
+
+    dependencies {
+        compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.0'
+        compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.0'
+    }
 }
