--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ project(":desktop") {
 
     dependencies {
         implementation project(":core")
+        testImplementation project(":core")
         api "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         api "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
